--- a/templates/metro/group.htm
+++ b/templates/metro/group.htm
@@ -232,7 +232,7 @@
 							<div class="label">
 								<h3 class="no-margin fg-white"><span class="{TILE_USER.icon_role}"></span></h3>
 							</div>
-							<div class="badge ">{TILE_USER.group_title}</div>
+							<div class="badge " ></div>
 						</div>
 					</div></a>
 					<!-- END TILE_USER -->
