--- a/templates/metro/home.htm
+++ b/templates/metro/home.htm
@@ -44,7 +44,14 @@
 					    </div>
 					</a>					
 					
-
+					<a class="tile bg-lightOlive double double-vertical " data-click="transform"  href="announcement_list.php">
+					    <div class=" tile-content icon">
+					        <i class="icon-info-2"></i>
+					    </div>
+					    <div class="tile-status">
+					        <span class="name"><h2 class="fg-white">討論區</h2></span>
+					    </div>
+					</a>		
 					
 					
 
