--- a/templates/metro/announcement_detail.htm
+++ b/templates/metro/announcement_detail.htm
@@ -106,7 +106,7 @@
 							<p id="reply_content">回復內容</p>			        
 					<div class="clear"></div>
 					<span class="datetime" id="reply_datatime">回復時間 </span> 
-					<span class="icon-remove"   style="cursor: pointer; color: #aaa;margin-left:15px" onClick="delete_reply(this)"> 刪除</span> 
+					<span class="icon-remove {discuss_manage_display}"   style="cursor: pointer; color: #aaa;margin-left:15px" onClick="delete_reply(this)"> 刪除</span> 
 			  </div>
 			</li>
 			
@@ -119,7 +119,7 @@
 							<p id="reply_content">{COMMENT.reply_content}</p>			        
 					<div class="clear"></div>
 					<span class="datetime" id="reply_datatime">{COMMENT.reply_datatime}</span>
-					<span class="icon-remove"   style="cursor: pointer; color: #aaa;margin-left:15px" onClick="delete_reply(this)"> 刪除</span> 
+					<span class="icon-remove   {discuss_manage_display}"   style="cursor: pointer; color: #aaa;margin-left:15px" onClick="delete_reply(this)"> 刪除</span> 
 					
 			  </div>
 			</li>
