--- a/templates/metro/contact_view.htm
+++ b/templates/metro/contact_view.htm
@@ -83,6 +83,13 @@
 			        <span class="check"></span>
 			        使用者管理
 			    </label>
+			    
+			    
+			    <label>
+			        <input type="checkbox"  id="power[]"  name="power[]"    value="discuss_manage"  {discuss_manage_checked}/>
+			        <span class="check"></span>
+			        討論區管理
+			    </label>
 			</div>		
 		</dd>
 	</dl>
