--- a/templates/metro/course_list.htm
+++ b/templates/metro/course_list.htm
@@ -103,8 +103,8 @@
 
 							</div>		
 						</div>
-						<div class="tile-status">
-							<div class="label fg-white no-margin"  style="font-size: {CATALOG.TILE_LIST.fontsize}pt;">{CATALOG.TILE_LIST.course_title}</div>
+						<div class="tile-status"  style=" {CATALOG.TILE_LIST.div_style}">
+							<div class="label fg-white no-margin"  style="  {CATALOG.TILE_LIST.fontsize};">{CATALOG.TILE_LIST.course_title}</div>
 						</div>
 						<div class="brand">
 					        <div class="badge {CATALOG.TILE_LIST.status} " ></div>
